# orca-jedi

./: CMakeLists.txt
src/mains/: CMakeLists.txt  nvorcamodel3DVar.cc  nvorcamodelErrorCovarianceToolbox.cc  orcamodel3DVar.cc  orcamodelDirac.cc  orcamodelErrorCovarianceToolbox.cc  orcamodelErrorCovarianceTraining.cc
src/orca-jedi/: CMakeLists.txt
src/orca-jedi/covariance/: Covariance.cc  Covariance.h  CovarianceParameters.h  SaberOrcaJediFilter.cc  SaberOrcaJediFilter.h
src/orca-jedi/geometry/: Geometry.cc  Geometry.h  GeometryParameters.h
src/orca-jedi/increment/: Increment.cc  Increment.h
src/orca-jedi/interpolator/: Interpolator.cc  Interpolator.h
src/orca-jedi/nemo_io/: NemoFieldReader.cc  NemoFieldReader.h  NemoFieldWriter.cc  NemoFieldWriter.h  ReadServer.cc  ReadServer.h  WriteServer.h
src/orca-jedi/nemovar/: ErrorCovarianceNV.cc  ErrorCovarianceNV.h  ErrorCovarianceNV.interface.F90  FieldsNV.cc  FieldsNV.h  FieldsNV.interface.F90  FieldsTLAD.interface.F90  FortranNV.h  GeometryNV.cc  GeometryNV.h  GeometryNV.interface.F90  IncrementNV.cc  IncrementNV.h  ModelNV.cc  ModelNV.h  StateNV.cc  StateNV.h  VariablesNV.cc  VariablesNV.h  VariablesNV.interface.F90  nv_init_wrapper.F90  pm_link_mod.F90  pm_linked_list_mod.F90
src/orca-jedi/run/: Run.cc  Run.h
src/orca-jedi/saber_covariance/: SaberOrcaJediFilter.cc  SaberOrcaJediFilter.h
src/orca-jedi/state/: State.cc  State.h  StateIOUtils.cc  StateIOUtils.h  StateParameters.h
src/orca-jedi/utilities/: OrcaModelTraits.h
src/tests/: CMakeLists.txt
src/tests/Data/: orca1_t_nemo.nc
src/tests/orca-jedi/: test_state.cc
src/tests/testinput/: 3dvar_seaice_obs.yaml  3dvar_seaice_obs_orca1.yaml  CMakeLists.txt  dirac.yaml  error_covariance_training_bump_nicas.yaml  error_covariance_training_bump_nicas_orca1.yaml  hofx_nc_ice_orca1.yaml  nv3dvar_seaice_obs.yaml  nvdirac.yaml  ojs3dvar_seaice_obs.yaml  ojs3dvar_seaice_obs_orca1.yaml  ojsdirac.yaml  ojsdirac_orca1.yaml
